// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-cc-logo renders 1`] = `
<ce-cc-logo>
  <mock:shadow-root>
    <div class="cc-logo" part="base">
      <ce-icon name="credit-card" style="--height: 0.63em;"></ce-icon>
    </div>
  </mock:shadow-root>
</ce-cc-logo>
`;

exports[`sc-cc-logo renders 1`] = `
<sc-cc-logo>
  <mock:shadow-root>
    <div class="cc-logo" part="base">
      <sc-icon name="credit-card" style="--height: 0.63em;"></sc-icon>
    </div>
  </mock:shadow-root>
</sc-cc-logo>
`;
